# software-patterns-SOLID-principles

./: README.md
SOLID/pimpl_idiom/: main.cpp
SOLID/specification/: main.cpp  spec
creational_patterns/builder/: .main.cpp.swp
creational_patterns/builder/composite_builder/: main.cpp
creational_patterns/builder/fluent_builder/: main.cpp  parser
creational_patterns/builder/groovy_style_builder/: groovy_style_builder  main.cpp
creational_patterns/factory/abstact_factory/: abstract_drink_factory  main.cpp
creational_patterns/factory/factory/: main.cpp  pointfactory
structural_patterns/adapter/: adapter  main.cpp
structural_patterns/adapter/adapter_with_filter/: .ycm_extra_conf.py  CMakeLists.txt  main.cpp
structural_patterns/bridge/: main.cpp  renderer
structural_patterns/bridge/pimpl_idiom/: Person.cpp  Person.h  hi_person  main.cpp
structural_patterns/composite/: comosite  main.cpp
structural_patterns/composite/neural_network/: main  main.cpp
structural_patterns/decorator/dynamic_decorator/: dynamic_decorator.cpp
structural_patterns/decorator/static_decorator/: static_decorator  static_decorator.cpp
structural_patterns/facade/: .main.cpp.swp  main  main.cpp
structural_patterns/flyweight/: main.cpp
